fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ a.flyo-works {
 	flex-direction: row;
 }
 .quotes {
+	display: inline;
 	margin-top: 100px;
 	position: relative;
 	left: 80px;
